--- a/component/pom.xml
+++ b/component/pom.xml
@@ -18,14 +18,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.wso2.carbon.extension.identity.authenticator</groupId>
-        <artifactId>org.wso2.carbon.extension.identity.authenticator.instagram</artifactId>
+        <groupId>org.wso2.carbon.extension.identity.authenticator.outbound.instagram</groupId>
+        <artifactId>identity-outbound-auth-instagram</artifactId>
         <version>1.0.1-SNAPSHOT</version>
     </parent>
 
-    <groupId>org.wso2.carbon.extension.identity.authenticator</groupId>
     <artifactId>org.wso2.carbon.extension.identity.authenticator.instagram.connector</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
     <packaging>bundle</packaging>
     <name>WSO2 Carbon - Authenticator Library For Instagram</name>
     <url>http://wso2.org</url>
