--- a/component/pom.xml
+++ b/component/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.wso2.carbon.extension.identity.authenticator.outbound.instagram</groupId>
         <artifactId>identity-outbound-auth-instagram</artifactId>
-        <version>1.0.1</version>
+        <version>1.0.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>org.wso2.carbon.extension.identity.authenticator.instagram.connector</artifactId>
