--- a/pom.xml
+++ b/pom.xml
@@ -142,7 +142,7 @@
         <connection>scm:git:https://github.com/wso2-extensions/identity-outbound-auth-instagram.git</connection>
         <url>https://github.com/wso2-extensions/identity-outbound-auth-instagram.git</url>
         <developerConnection>scm:git:https://github.com/wso2-extensions/identity-outbound-auth-instagram.git</developerConnection>
-        <tag>org.wso2.carbon.extension.identity.authenticator.instagram-1.0.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <build>
