--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 
     <groupId>org.wso2.carbon.extension.identity.authenticator.outbound.instagram</groupId>
     <artifactId>identity-outbound-auth-instagram</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.1</version>
     <packaging>pom</packaging>
     <name>WSO2 Carbon Extension - Instagram Pom</name>
     <url>http://wso2.org</url>
@@ -142,7 +142,7 @@
         <connection>scm:git:https://github.com/wso2-extensions/identity-outbound-auth-instagram.git</connection>
         <url>https://github.com/wso2-extensions/identity-outbound-auth-instagram.git</url>
         <developerConnection>scm:git:https://github.com/wso2-extensions/identity-outbound-auth-instagram.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>identity-outbound-auth-instagram-1.0.1</tag>
     </scm>
 
     <build>
